[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/end_game_menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/main_menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Menu"]
margin_right = 1024.0
margin_bottom = 29.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Play"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="LevelSelect" type="Button" parent="Menu"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 62.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Level Select"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Exit" type="Button" parent="Menu"]
visible = false
margin_top = 66.0
margin_right = 1024.0
margin_bottom = 95.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Exit"
flat = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
